{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 1256,
  "lineage": "f0cc0349-a781-d270-5640-91de5d437f87",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c4d9b8d483e0e14",
            "association_id": "eipassoc-0dc67e9cc4126daec",
            "domain": "vpc",
            "id": "eipalloc-08c4d9b8d483e0e14",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08adc67ec0fe713d5",
            "private_dns": "ip-10-0-1-197.ec2.internal",
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-3-220-84-17.compute-1.amazonaws.com",
            "public_ip": "3.220.84.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kemgou-eks-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4e234cf499a0234",
            "association_id": "eipassoc-0a2b9844dfe4cb057",
            "domain": "vpc",
            "id": "eipalloc-0b4e234cf499a0234",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0da38324512e16d6c",
            "private_dns": "ip-10-0-3-187.ec2.internal",
            "private_ip": "10.0.3.187",
            "public_dns": "ec2-52-54-84-47.compute-1.amazonaws.com",
            "public_ip": "52.54.84.47",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kemgou-eks-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2c5526757f7a2aa",
            "association_id": "eipassoc-01646f051911f5579",
            "domain": "vpc",
            "id": "eipalloc-0d2c5526757f7a2aa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-028bbbdb4325e2f4d",
            "private_dns": "ip-10-0-5-135.ec2.internal",
            "private_ip": "10.0.5.135",
            "public_dns": "ec2-34-203-92-215.compute-1.amazonaws.com",
            "public_ip": "34.203.92.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "kemgou-eks-vpc-nat-eip-3"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-nat-eip-3"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:internet-gateway/igw-04229731a774463bf",
            "id": "igw-04229731a774463bf",
            "owner_id": "262485716661",
            "tags": {
              "Name": "kemgou-eks-vpc-internet-gateway"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-internet-gateway"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c4d9b8d483e0e14",
            "connectivity_type": "public",
            "id": "nat-0c24f0edddbc98331",
            "network_interface_id": "eni-08adc67ec0fe713d5",
            "private_ip": "10.0.1.197",
            "public_ip": "3.220.84.17",
            "subnet_id": "subnet-06d386d9c36b06fd6",
            "tags": {
              "Name": "kemgou-eks-vpc-nat-1"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4e234cf499a0234",
            "connectivity_type": "public",
            "id": "nat-031d7c74c00238049",
            "network_interface_id": "eni-0da38324512e16d6c",
            "private_ip": "10.0.3.187",
            "public_ip": "52.54.84.47",
            "subnet_id": "subnet-0c0f3b53fc65b6739",
            "tags": {
              "Name": "kemgou-eks-vpc-nat-2"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d2c5526757f7a2aa",
            "connectivity_type": "public",
            "id": "nat-0a0fc8cde1719cbd2",
            "network_interface_id": "eni-028bbbdb4325e2f4d",
            "private_ip": "10.0.5.135",
            "public_ip": "34.203.92.215",
            "subnet_id": "subnet-0d61ed1d3d0bb49d0",
            "tags": {
              "Name": "kemgou-eks-vpc-nat-3"
            },
            "tags_all": {
              "Name": "kemgou-eks-vpc-nat-3"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-03cbfe7ac5a32dd8c",
            "id": "rtb-03cbfe7ac5a32dd8c",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c24f0edddbc98331",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-private-route-1"
            },
            "tags_all": {
              "Name": "db-private-route-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-08af6e2834285af9a",
            "id": "rtb-08af6e2834285af9a",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031d7c74c00238049",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-private-route-2"
            },
            "tags_all": {
              "Name": "db-private-route-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-00a455cd00011d58b",
            "id": "rtb-00a455cd00011d58b",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a0fc8cde1719cbd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-private-route-3"
            },
            "tags_all": {
              "Name": "db-private-route-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-0f1df65c329a9f861",
            "id": "rtb-0f1df65c329a9f861",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c24f0edddbc98331",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-route-1"
            },
            "tags_all": {
              "Name": "eks-private-route-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-0334ec099703b3f83",
            "id": "rtb-0334ec099703b3f83",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031d7c74c00238049",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-route-2"
            },
            "tags_all": {
              "Name": "eks-private-route-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-0aca5e68006432459",
            "id": "rtb-0aca5e68006432459",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a0fc8cde1719cbd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-private-route-3"
            },
            "tags_all": {
              "Name": "eks-private-route-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:route-table/rtb-0ba40fcbc376c68a5",
            "id": "rtb-0ba40fcbc376c68a5",
            "owner_id": "262485716661",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04229731a774463bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01968dc390518456f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b1ae7b99b18cc9c",
            "route_table_id": "rtb-03cbfe7ac5a32dd8c",
            "subnet_id": "subnet-0212164c47f52595c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db-private-route",
            "aws_subnet.db-private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb4a457ec6478359",
            "route_table_id": "rtb-03cbfe7ac5a32dd8c",
            "subnet_id": "subnet-07df3091e49f58abe"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db-private-route",
            "aws_subnet.db-private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dfdd6721c86a55e",
            "route_table_id": "rtb-08af6e2834285af9a",
            "subnet_id": "subnet-065c803be072f3c40"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db-private-route",
            "aws_subnet.db-private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08463379b9ea0032c",
            "route_table_id": "rtb-08af6e2834285af9a",
            "subnet_id": "subnet-0bf8ba00f4f31fa7a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db-private-route",
            "aws_subnet.db-private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df16cd5299561029",
            "route_table_id": "rtb-00a455cd00011d58b",
            "subnet_id": "subnet-049e47a7463cbd1e3"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db-private-route",
            "aws_subnet.db-private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cff8865a67cb1602",
            "route_table_id": "rtb-00a455cd00011d58b",
            "subnet_id": "subnet-045ff9e23a8b91757"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db-private-route",
            "aws_subnet.db-private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edb3d01a3bc231c6",
            "route_table_id": "rtb-0f1df65c329a9f861",
            "subnet_id": "subnet-0f8796ba5bd2e67ab"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.eks-private-route",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e84da12eb655b519",
            "route_table_id": "rtb-0f1df65c329a9f861",
            "subnet_id": "subnet-0e91fac899f33dc81"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.eks-private-route",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04de98e6402b68812",
            "route_table_id": "rtb-0334ec099703b3f83",
            "subnet_id": "subnet-08cca88b861299408"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.eks-private-route",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c864ef9fb800b451",
            "route_table_id": "rtb-0334ec099703b3f83",
            "subnet_id": "subnet-049289ce884e8d228"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.eks-private-route",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0560789ae5e386015",
            "route_table_id": "rtb-0aca5e68006432459",
            "subnet_id": "subnet-0287ba62953681b9f"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.eks-private-route",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080a98bd92f215645",
            "route_table_id": "rtb-0aca5e68006432459",
            "subnet_id": "subnet-0fcfa0aca69bced5b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.eks-private-route",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb8b3a1d370b9f16",
            "route_table_id": "rtb-0ba40fcbc376c68a5",
            "subnet_id": "subnet-06d386d9c36b06fd6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3faba035369bbb4",
            "route_table_id": "rtb-0ba40fcbc376c68a5",
            "subnet_id": "subnet-002aa93ddaa29f18e"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05415033dab3e6954",
            "route_table_id": "rtb-0ba40fcbc376c68a5",
            "subnet_id": "subnet-0c0f3b53fc65b6739"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f538b302916c0244",
            "route_table_id": "rtb-0ba40fcbc376c68a5",
            "subnet_id": "subnet-0c3f13aac8bdeb82c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055d0e3c7b6ecc84d",
            "route_table_id": "rtb-0ba40fcbc376c68a5",
            "subnet_id": "subnet-0d61ed1d3d0bb49d0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c72039500272c3d",
            "route_table_id": "rtb-0ba40fcbc376c68a5",
            "subnet_id": "subnet-0bb5dff2235966298"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.db-private",
            "aws_subnet.eks_private",
            "aws_subnet.public",
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0212164c47f52595c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0212164c47f52595c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-private-subnet-1"
            },
            "tags_all": {
              "Name": "db-private-subnet-1"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-07df3091e49f58abe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07df3091e49f58abe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-private-subnet-2"
            },
            "tags_all": {
              "Name": "db-private-subnet-2"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-065c803be072f3c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c803be072f3c40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-private-subnet-3"
            },
            "tags_all": {
              "Name": "db-private-subnet-3"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0bf8ba00f4f31fa7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf8ba00f4f31fa7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-private-subnet-4"
            },
            "tags_all": {
              "Name": "db-private-subnet-4"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-049e47a7463cbd1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.17.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049e47a7463cbd1e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-private-subnet-5"
            },
            "tags_all": {
              "Name": "db-private-subnet-5"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-045ff9e23a8b91757",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.18.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045ff9e23a8b91757",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-private-subnet-6"
            },
            "tags_all": {
              "Name": "db-private-subnet-6"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0f8796ba5bd2e67ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8796ba5bd2e67ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0e91fac899f33dc81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e91fac899f33dc81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-2"
            },
            "tags_all": {
              "Name": "eks-private-subnet-2"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-08cca88b861299408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cca88b861299408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-3"
            },
            "tags_all": {
              "Name": "eks-private-subnet-3"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-049289ce884e8d228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049289ce884e8d228",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-4"
            },
            "tags_all": {
              "Name": "eks-private-subnet-4"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0287ba62953681b9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0287ba62953681b9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-5"
            },
            "tags_all": {
              "Name": "eks-private-subnet-5"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0fcfa0aca69bced5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcfa0aca69bced5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-6"
            },
            "tags_all": {
              "Name": "eks-private-subnet-6"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-06d386d9c36b06fd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d386d9c36b06fd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-002aa93ddaa29f18e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002aa93ddaa29f18e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0c0f3b53fc65b6739",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0f3b53fc65b6739",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-3"
            },
            "tags_all": {
              "Name": "public-subnet-3"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0c3f13aac8bdeb82c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3f13aac8bdeb82c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-4"
            },
            "tags_all": {
              "Name": "public-subnet-4"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0d61ed1d3d0bb49d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d61ed1d3d0bb49d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-5"
            },
            "tags_all": {
              "Name": "public-subnet-5"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:subnet/subnet-0bb5dff2235966298",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5dff2235966298",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "262485716661",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-6"
            },
            "tags_all": {
              "Name": "public-subnet-6"
            },
            "vpc_id": "vpc-01968dc390518456f"
          },
          "dependencies": [
            "aws_vpc.kemgou",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kemgou",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:262485716661:vpc/vpc-01968dc390518456f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08f8f9f2ce0a524f0",
            "default_route_table_id": "rtb-0172ccb2fb0ff872c",
            "default_security_group_id": "sg-0b657a0bdcee70cd2",
            "dhcp_options_id": "dopt-04eb18b7a7eb4f734",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01968dc390518456f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0172ccb2fb0ff872c",
            "owner_id": "262485716661",
            "tags": {
              "AssetAreaName": "ADL",
              "AssetID": "kemgou",
              "AssetName": "Insfrastructure",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "kemgou-dev-delta-vpc",
              "Project": "delta",
              "cloudProvider": "aws"
            },
            "tags_all": {
              "AssetAreaName": "ADL",
              "AssetID": "kemgou",
              "AssetName": "Insfrastructure",
              "ControlledBy": "Terraform",
              "Environment": "dev",
              "Name": "kemgou-dev-delta-vpc",
              "Project": "delta",
              "cloudProvider": "aws"
            }
          }
        }
      ]
    }
  ]
}